--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 	<!-- CODELAB: Add link rel manifest -->
 	<!-- CODELAB: Add iOS meta tags and icons -->
 	<!-- CODELAB: Add description here -->
+	<meta name="description" content="Whatsapp">
 	<!-- CODELAB: Add meta theme-color -->
 
 </head>
