--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 
 	<!-- CODELAB: Add link rel manifest -->
+	<link rel="manifest" href="/manifest.json">
 	<!-- CODELAB: Add iOS meta tags and icons -->
 	<!-- CODELAB: Add description here -->
 	<meta name="description" content="Whatsapp">
