--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 	<main class="main">
 
-		<div id="about" class="weather-card">
+		<div class="isi">
 			<b>Whatsapp Anda Versi Lama</b>
 		</div>
 
