add install button

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 		<h1>
 			Whatsapp
 		</h1>
+		<button id="butInstall" aria-label="Install" hidden></button>
 	</header>
 
 	<main class="main">
@@ -42,6 +43,7 @@
 
 	<!-- <script src="/scripts/luxon-1.11.4.js"></script> -->
 	<!-- CODELAB: Add the install script here -->
+	<script src="/scripts/install.js"></script>
 	<script>
 		// CODELAB: Register service worker.
 		if ('serviceWorker' in navigator) {
